<resources>
    <string name="app_name">GeoMeet</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_location_picker">Map</string>
    <string name="friend_name">Friend name</string>
    <string name="upcoming_meetings">Upcoming meetings</string>
    <string name="view_all_meetings">View all meetings</string>
    <string name="my_locations">My locations</string>
    <string name="my_connections">My connections</string>
    <string name="my_profile">My profile</string>
    <string name="invites">Invites</string>
    <string name="meeting_title">Meeting title</string>
    <string name="_03_03_2020_13_30">03/03/2020 13:30</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pick_location">pick location</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="register">Register</string>
    <string name="meeting_title">Meeting title</string>
    <string name="_03_03_2020_13_30">03/03/2020 13:30</string>
    <string name="attending_0">Attending: 0</string>
    <string name="plan_new_meeting">Plan new meeting</string>
    <string name="member_name">Member name</string>
    <string name="enter_message">Enter message</string>
    <string name="send">SEND</string>
    <string name="plus">+</string>
    <string name="meeting_name">Meeting name:</string>
    <string name="location">Location:</string>
    <string name="pick_on_map">Pick on map</string>
    <string name="invited">Invited:</string>
    <string name="description">Description:</string>
    <string name="select_date">Select date</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="jeroen_gijsbers">Jeroen Gijsbers</string>
    <string name="jeroen">jeroen</string>
    <string name="about_me">About me:</string>
    <string name="insert_your_description_here">Insert your description here!</string>
    <string name="email_address">Email address</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_login">Back to login</string>
    <string name="meeting_name_withoutdot">Meeting name</string>
    <string name="picked_location">Atlas 3.10, Eindhoven, The Netherlands</string>
    <string name="show_on_maps">Show on Maps</string>
    <string name="minus">-</string>
    <string name="organizer">Organized by: Jeroen Gijsbers</string>
    <string name="selected_date">Monday, 16th March, 18:40</string>
    <string name="insert_description">Insert your description here!</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="dummy_text">Dummy text</string>
    <string name="_11_40">11:40</string>
    <string name="search">search</string>
</resources>
