<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeMeeting">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="20dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/seeMeeting_meetingName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:onClick="editMeetingName"
            android:text="@string/meeting_name_withoutdot"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/seeMeeting_meetingLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seeMeeting_meetingName"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/picked_location" />

        <Button
            android:id="@+id/seeMeeting_mapsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seeMeeting_meetingLocation"
            android:layout_alignEnd="@id/seeMeeting_meetingLocation"
            android:layout_gravity="end"
            android:onClick="toMap"
            android:text="@string/show_on_maps" />

        <ListView
            android:id="@+id/seeMeeting_comingConnectionsListView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@id/seeMeeting_mapsButton" />

        <LinearLayout
            android:id="@+id/linearlayout_addremove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seeMeeting_comingConnectionsListView"
            android:layout_alignEnd="@id/seeMeeting_comingConnectionsListView"
            android:orientation="horizontal">

            <Button
                android:id="@+id/seeMeeting_removeButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="removeUsers"
                android:text="@string/minus" />

            <Button
                android:id="@+id/seeMeeting_inviteButton"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:onClick="addUsers"
                android:text="@string/plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/seeMeeting_organizer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout_addremove"
            android:gravity="center"
            android:text="@string/organizer" />

        <TextView
            android:id="@+id/seeMeeting_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seeMeeting_organizer"
            android:gravity="center"
            android:onClick="editMeetingDate"
            android:text="@string/selected_date" />

        <ScrollView
            android:id="@+id/seeMeeting_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/seeMeeting_date"
            android:layout_marginTop="10dp"
            android:background="@drawable/border">

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/insert_description"
                android:padding="5dp" />
        </ScrollView>

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/seeMeeting_description"
            android:layout_alignEnd="@id/seeMeeting_description"
            android:onClick="toChat"
            android:text="@string/go_to_chat" />

    </RelativeLayout>
</ScrollView>